Opened 13 years ago
Closed 13 years ago
#4358 closed bug (fixed)
Be Menu items disappears after changing Tracker prefs
Reported by: | Disreali | Owned by: | mmlr |
---|---|---|---|
Priority: | normal | Milestone: | R1 |
Component: | File Systems | Version: | R1/pre-alpha1 |
Keywords: | Cc: | ||
Blocked By: | Blocking: | ||
Platform: | All |
Description
Tested on alpha-candidate iso hrev32770 with VirutalBox 3.0.4
Boot up alpha iso in emulator and select Desktop when asked. Go to the Leaf Menu to make sure it is populated, then go to Preferences -> Tracker. Changing a single pref check box will trigger. Go back to leaf menu and it will say 'Be folder is empty' under Recent Applications. It is always reproducible on this rev.
Changing any pref should not wipe out the be menu folder.
Attachments (1)
Change History (3)
by , 13 years ago
Attachment: | haiku-cd_desktop_r32700_no_be_menu.jpg added |
---|
comment:1 by , 13 years ago
Component: | - General → File Systems |
---|---|
Owner: | changed from | to
Status: | new → assigned |
Note:
See TracTickets
for help on using tickets.
Probably write_overlay related.