Implement TODO: Check for non-empty directories before removing an entry. This fixes #4358, there changing the Tracker preferences causes some default directories to be created, like "home" and "config", which were previously simply killing off the real ones.

git-svn-id: file:///srv/svn/repos/haiku/haiku/trunk@32822 a95241bf-73f2-0310-859d-f6bbb57e9c96